<resources>
    <string name="app_name">MyApp</string>


    <string name="hint_network_error">网络错误，请检查网络设置</string>
    <string name="hint_data_error">数据错误，请稍候重试</string>
    <string name="hint_operation_error">操作失败，请稍候重试</string>


    <string name="action_feed">意见反馈</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="tab_weixin">微信</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">发现</string>
    <string name="tab_me">我</string>


    <string name="act_guide_skip">跳过></string>




    <string name="activity_login_forget_pwd">忘记密码？</string>
    <string name="activity_login_weixin_qq">微信和QQ用户请点击下方按钮登录</string>
    <string name="activity_login_weixinlogin">微信登录</string>
    <string name="activity_login_qqlogin">QQ登录</string>
    <string name="activity_login_register">注册</string>
    <string name="activity_login_enter">登录</string>
    <string name="str_login">登录</string>
    <string name="str_enter_password">请输入密码</string>
    <string name="str_enter_phone_number">请输入手机号码</string>
</resources>
